--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,23 @@
 {
-  "scripts": {
-    "test": "mocha --require ../node_modules/babel-core/register models/UserTest.js models/JobTest.js controllers/userControllerTest.js controllers/jobControllerTest.js"
-  }
+	"scripts": {
+		"test":
+			"mocha --require ../node_modules/babel-core/register models/UserTest.js models/JobTest.js controllers/userControllerTest.js controllers/jobControllerTest.js"
+	},
+	"dependencies": {
+		"babel": "^6.23.0",
+		"chai": "^4.1.2",
+		"mocha": "^5.2.0",
+		"mongoose": "^5.2.7"
+	},
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-register": "^6.26.0"
+	},
+	"name": "back-end",
+	"description":
+		"You are working on the back end for an application intended to support its users in exploring current job openings. You will do the following in 2 phases:",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "",
+	"license": "ISC"
 }
